parslers-benchmark/src/tests/invalid/syntaxErr/basic/skpErr.wacc
# skip typo

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin skp end
